@@ -110,6 +110,7 @@
         <module>liquibase-lemminx-extension-core</module>
         <module>liquibase-lemminx-extension</module>
         <module>liquibase-lemminx-extension-test</module>
+		<module>liquibase-lemminx-extension-archunit-test</module>
         <module>liquibase-lemminx-eclipse</module>
 		<module>liquibase-editor-adapter</module>
     </modules>
@@ -232,6 +233,9 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <version>${maven-surefire.version}</version>
+	                <configuration>
+	                    <argLine>--enable-preview --add-exports org.junit.platform.commons/org.junit.platform.commons.util=ALL-UNNAMED --add-exports org.junit.platform.commons/org.junit.platform.commons.logging=ALL-UNNAMED</argLine>
+	                </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
